<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.allergietb.MainActivity$PlaceholderFragment" >

	<ScrollView    
	    android:layout_width="fill_parent"
    	android:layout_height="fill_parent">

	    <LinearLayout 
	            android:layout_width="match_parent"
    			android:layout_height="match_parent"
    			android:orientation="vertical">

	        <TextView
	            android:id="@+id/date_time_time_textView"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/time"
	            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TimePicker
            android:id="@+id/timePicker1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/date_time_date_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <DatePicker
            android:id="@+id/datePicker1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        
        <Button
	        android:id="@+id/date_time_save_btn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentBottom="true"
	        android:layout_alignParentLeft="true"
	        android:text="@string/save" 
	        android:onClick="saveDate"/>
    </LinearLayout>
	</ScrollView>

</LinearLayout>